[gd_scene load_steps=4 format=3 uid="uid://b0eafs0fgc2xr"]

[ext_resource type="Script" path="res://Main/Dutt/Assets/PortalManager/portal_script.gd" id="1_305fj"]
[ext_resource type="Texture2D" uid="uid://b61plgnupf5m7" path="res://Main/K9/Assets/2D/Sprites/PlainCircle.png" id="2_74jvm"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3eg45"]
radius = 22.0
height = 78.0

[node name="Portal_000" type="Node2D"]
script = ExtResource("1_305fj")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.156863, 0.301961, 1)
scale = Vector2(0.090247, 0.161434)
texture = ExtResource("2_74jvm")

[node name="Sprite2D2" type="Sprite2D" parent="."]
modulate = Color(1, 0.635294, 0.301961, 1)
position = Vector2(-2, 0)
scale = Vector2(0.0857221, 0.15334)
texture = ExtResource("2_74jvm")

[node name="PortalArea" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="PortalArea"]
shape = SubResource("CapsuleShape2D_3eg45")

[node name="NavigationLink2D" type="NavigationLink2D" parent="."]

[connection signal="body_entered" from="PortalArea" to="." method="_on_portal_area_body_entered"]
[connection signal="body_exited" from="PortalArea" to="." method="_on_portal_area_body_exited"]
